# autocompletion

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh
dataset/: Lexique383.csv  grab.py
src/: input.rs  main.rs
