[package]
name = "autocompletion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
reqwest = "*"
csv = "*"
device_query = "*"
enigo = "*"
gtk = { version = "*", package = "gtk4" }
gtk-sys = "0.14.0"