[package]
name = "autocompletion"
version = "0.1.0-dev.1"
edition = "2021"

[target.x86_64-unknown-linux-gnu]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
device_query = "*"
enigo = "*"
